feature/WL-7: removed Product creating
